nullaway_error_B3AEA0CE-407D-41B3-93A6-962C1EF537EB.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-websocket/src/main/java/org/springframework/web/socket/sockjs/support/AbstractSockJsService.java:345: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.corsConfiguration.getAllowedOrigins();
		^
    (see http://t.uber.com/nullaway )
